Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20487,13 +20487,6 @@ body.white-version .rn-btn-ulderline {
     box-shadow: var(--shadow-white-3);
 }
 
-.white-version .popup-mobile-menu .inner .content .social-share-style-1 .social-share li a {
-    background: linear-gradient(145deg, #0052D4, #4364F7);
-}
-.white-version .popup-mobile-menu .inner .content .social-share-style-1 .social-share li a svg {
-    color: #ffffff;
-}
-
 .white-version a.video-play-button span {
     border-left: 27px solid rgba(44, 42, 43, 0.8078431373);
     border-top: 17px solid transparent;
